Added new tunes and chords

--- a/chords.html
+++ b/chords.html
@@ -80,6 +80,11 @@
             >: Polska, A
           </li>
           <li class="tune-name">
+            <a href="./musicFiles/chords/arthur-darleys-chords.html"
+              >Arthur Darley's</a
+            >: Jig, D
+          </li>
+          <li class="tune-name">
             <a href="./musicFiles/chords/ballydesmond.html"
               >The Ballydesmond (#2)</a
             >: Polka, Am dor
@@ -111,6 +116,11 @@
           <li class="tune-name">
             <a href="./musicFiles/chords/cup-of-tea.html">The Cup of Tea</a>:
             Reel, Em dor
+          </li>
+          <li class="tune-name">
+            <a href="./musicFiles/chords/dans-loudieg-chords.html"
+              >Dans Loudieg</a
+            >: Am
           </li>
           <li class="tune-name">
             <a href="./musicFiles/chords/drowsy-maggie.html">Drowsy Maggie</a>:
@@ -216,6 +226,11 @@
           <li class="tune-name">
             <a href="./musicFiles/chords/nigun-atik.html">Nigun Atik</a>: E
             Freygish
+          </li>
+          <li class="tune-name">
+            <a href="./musicFiles/chords/l'orientale-chords.html"
+              >L'Orientale</a
+            >
           </li>
           <li class="tune-name">
             <a href="./musicFiles/chords/over-the-moor-to-maggie-chords.html"
