--- a/sessionClass.html
+++ b/sessionClass.html
@@ -90,15 +90,17 @@
         </div>
       </div>
       <div class="tunes-week tunes-container">
-        <h3 class="centered-content sub-heading">Tunes of the week:</h3>
+        <h3 class="centered-content sub-heading">Tune(s) of the week:</h3>
+
         <p class="tune-name">
-          <a href="./Tunes/over-the-moor-to-maggie.html"
-            >Over The Moor To Maggie</a
-          >
+          <a href="./Tunes/antin-miko.html">Antin Mikko, </a>
+
+          <a href="./Tunes/arthur-darleys.html">Arthur Darley's</a>
         </p>
         <h3 class="centered-content sub-heading">Up Next:</h3>
         <p class="tune-name">
-          <a href="./Tunes/antin-miko.html">Antin Miko</a>
+          <a href="./Tunes/dans-loudieg.html">Dans Loudieg</a>,
+          <a href="./Tunes/l'orientale.html">L'Orientale</a>
         </p>
       </div>
       <div>
