Edited chord chart, added new tune, small adjustments

--- a/Tunes/les-trois-canards.html
+++ b/Tunes/les-trois-canards.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Antin Mikko</title>
+    <title>Les Trois Canards</title>
     <link rel="stylesheet" href="../styles/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -62,21 +62,10 @@
     <div class="sheetMusicContainer">
       <img
         class="img-tune"
-        src="../musicFiles/antin-mikko.png"
+        src="../musicFiles/les-trois-canards.png"
         alt="Sheet music"
       />
     </div>
-    <div class="musicPlayer">
-      <iframe
-        style="border-radius: 12px"
-        src="https://open.spotify.com/embed/track/577T5XLMDJoylUOpFFBfNn?utm_source=generator"
-        width="100%"
-        height="352"
-        frameborder="0"
-        allowfullscreen=""
-        allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-        loading="lazy"
-      ></iframe>
-    </div>
+    <div class="musicPlayer"></div>
   </body>
 </html>
