--- a/sessionClass.html
+++ b/sessionClass.html
@@ -93,14 +93,15 @@
         <h3 class="centered-content sub-heading">Tune(s) of the week:</h3>
 
         <p class="tune-name">
-          <a href="./Tunes/antin-miko.html">Antin Mikko, </a>
+          <a href="./Tunes/antin-mikko.html">Antin Mikko, </a>
 
           <a href="./Tunes/arthur-darleys.html">Arthur Darley's</a>
         </p>
         <h3 class="centered-content sub-heading">Up Next:</h3>
         <p class="tune-name">
           <a href="./Tunes/dans-loudieg.html">Dans Loudieg</a>,
-          <a href="./Tunes/l'orientale.html">L'Orientale</a>
+          <a href="./Tunes/l'orientale.html">L'Orientale</a>,
+          <a href="./Tunes/les-trois-canards.html">Les Trois Canards</a>
         </p>
       </div>
       <div>
@@ -200,6 +201,11 @@
           <li class="tune-name">
             <a href="./Tunes/cuckoos-nest.html">The Cuckoo's Nest</a>: Hornpipe,
             D
+          </li>
+          <li class="tune-name">
+            <a href="https://thesession.org/tunes/20" target="_blank"
+              >The Cup Of Tea</a
+            >: Reel, Em / D
           </li>
           <li class="tune-name">
             <a
