Added 2 new tunes of the week

--- a/sessionClass.html
+++ b/sessionClass.html
@@ -93,15 +93,14 @@
         <h3 class="centered-content sub-heading">Tune(s) of the week:</h3>
 
         <p class="tune-name">
-          <a href="./Tunes/antin-mikko.html">Antin Mikko, </a>
-
-          <a href="./Tunes/arthur-darleys.html">Arthur Darley's</a>
-        </p>
-        <h3 class="centered-content sub-heading">Up Next:</h3>
-        <p class="tune-name">
           <a href="./Tunes/dans-loudieg.html">Dans Loudieg</a>,
           <a href="./Tunes/l'orientale.html">L'Orientale</a>,
           <a href="./Tunes/les-trois-canards.html">Les Trois Canards</a>
+        </p>
+        <h3 class="centered-content sub-heading">Up Next:</h3>
+        <p class="tune-name">
+          <a href="./Tunes/white-petticoat.html">The White Petticoat</a>,
+          <a href="./Tunes/sailors-wife.html">Sailor's Wife</a>
         </p>
       </div>
       <div>
@@ -116,9 +115,15 @@
             >: Polka, D
           </li>
           <li class="tune-name">
+            <a href="./Tunes/antin-mikko.html">Antin Mikko</a>: Polksa, A
+          </li>
+          <li class="tune-name">
             <a href="https://thesession.org/tunes/986" target="_blank"
               >The Arran Boat Song</a
             >: Waltz, Em dor
+          </li>
+          <li class="tune-name">
+            <a href="./Tunes/arthur-darleys.html">Arthur Darley's</a>: Jig, D
           </li>
           <li class="tune-name">
             <a href="https://thesession.org/tunes/4997" target="_blank"
@@ -206,6 +211,9 @@
             <a href="https://thesession.org/tunes/20" target="_blank"
               >The Cup Of Tea</a
             >: Reel, Em / D
+          </li>
+          <li class="tune-name">
+            <a href="./Tunes/dans-loudieg.html">Dans Loudieg</a>: Ronde, Am
           </li>
           <li class="tune-name">
             <a
@@ -390,6 +398,9 @@
             >: Reel, G
           </li>
           <li class="tune-name">
+            <a href="./Tunes/l'orientale.html">L'Orientale</a>
+          </li>
+          <li class="tune-name">
             <a href="https://thesession.org/tunes/85" target="_blank"
               >The Rakes Of Mallow</a
             >: Polka, G
@@ -487,6 +498,9 @@
               target="_blank"
               >Tripping Up The Stairs</a
             >: Jig, D
+          </li>
+          <li class="tune-name">
+            <a href="./Tunes/les-trois-canards.html">Les Trois Canards</a>
           </li>
           <li class="tune-name">
             <a href="https://thesession.org/tunes/14425" target="_blank"
