Added chord charts for new tunes

--- a/chords.html
+++ b/chords.html
@@ -257,6 +257,11 @@
             >: Jig, D
           </li>
           <li class="tune-name">
+            <a href="./musicFiles/chords/sailors-wife-chords.html"
+              >Sailor's Wife</a
+            >: Jig, Dm
+          </li>
+          <li class="tune-name">
             <a href="./musicFiles/chords/seanamhac-tube-station.html"
               >Seanamhac Tube Station</a
             >: Reel, G dor
@@ -296,6 +301,11 @@
             <a href="./musicFiles/chords/vals-efter-lasse-i-lyby.html"
               >Vals Efter Lasse I Lyby</a
             >: Waltz, Am
+          </li>
+          <li class="tune-name">
+            <a href="./musicFiles/chords/white-petticoat-chords.html"
+              >The White Petticoat</a
+            >: Jig, Em
           </li>
         </ul>
       </div>
