Added a few new chord charts to old tunes

--- a/chords.html
+++ b/chords.html
@@ -85,6 +85,11 @@
             >: Jig, D
           </li>
           <li class="tune-name">
+            <a href="./musicFiles/chords/ashokan-farewell-chords.html"
+              >Ashokan Farewell</a
+            >: Waltz, D
+          </li>
+          <li class="tune-name">
             <a href="./musicFiles/chords/ballydesmond.html"
               >The Ballydesmond (#2)</a
             >: Polka, Am dor
@@ -112,6 +117,11 @@
           <li class="tune-name">
             <a href="./musicFiles/chords/crested-hens.html">Crested Hens</a>:
             Waltz, Em
+          </li>
+          <li class="tune-name">
+            <a href="./musicFiles/chords/cuckoos-nest-chords.html"
+              >Cuckoo's Nest</a
+            >: Hornpipe, D
           </li>
           <li class="tune-name">
             <a href="./musicFiles/chords/cup-of-tea.html">The Cup of Tea</a>:
