--- a/sessionClass.html
+++ b/sessionClass.html
@@ -204,8 +204,7 @@
             >: Waltz, Em dor
           </li>
           <li class="tune-name">
-            <a href="./Tunes/cuckoos-nest.html">The Cuckoo's Nest</a>: Hornpipe,
-            D
+            <a href="./Tunes/cuckoos-nest.html">Cuckoo's Nest</a>: Hornpipe, D
           </li>
           <li class="tune-name">
             <a href="https://thesession.org/tunes/20" target="_blank"
