--- a/sessionClass.html
+++ b/sessionClass.html
@@ -93,14 +93,12 @@
         <h3 class="centered-content sub-heading">Tune(s) of the week:</h3>
 
         <p class="tune-name">
-          <a href="./Tunes/dans-loudieg.html">Dans Loudieg</a>,
-          <a href="./Tunes/l'orientale.html">L'Orientale</a>,
-          <a href="./Tunes/les-trois-canards.html">Les Trois Canards</a>
+          <a href="./Tunes/white-petticoat.html">The White Petticoat</a>,
+          <a href="./Tunes/sailors-wife.html">Sailor's Wife</a>
         </p>
         <h3 class="centered-content sub-heading">Up Next:</h3>
         <p class="tune-name">
-          <a href="./Tunes/white-petticoat.html">The White Petticoat</a>,
-          <a href="./Tunes/sailors-wife.html">Sailor's Wife</a>
+          <a href="https://thesession.org/tunes/48">Hardiman The Fiddler</a>
         </p>
       </div>
       <div>
@@ -506,6 +504,18 @@
               >Vals Efter Lasse I Lyby</a
             >: Waltz, Am
           </li>
+          <div class="musicPlayer">
+            <iframe
+              style="border-radius: 12px"
+              src="https://open.spotify.com/embed/playlist/3PoOBseX7VUjZZXb4ij42D?utm_source=generator"
+              width="100%"
+              height="352"
+              frameborder="0"
+              allowfullscreen=""
+              allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+              loading="lazy"
+            ></iframe>
+          </div>
         </ul>
       </div>
     </div>
