Added another tune plus chords

--- a/chords.html
+++ b/chords.html
@@ -169,7 +169,12 @@
           </li>
           <li class="tune-name">
             <a href="./musicFiles/chords/green-cake.html">The Green Cake</a>:
-            F#m dor
+            Reel, F#m dor
+          </li>
+          <li class="tune-name">
+            <a href="./musicFiles/chords/hardiman-the-fiddler-chords.html"
+              >Hardiman the Fiddler</a
+            >: Slip Jig, D mix
           </li>
           <li class="tune-name">
             <a href="./musicFiles/chords/humours-of-ballyloughlin.html"
@@ -177,13 +182,18 @@
             >: Jig, D mix
           </li>
           <li class="tune-name">
+            <a href="./musicFiles/chords/jag-ska-lärä-dig-slängpolska.html"
+              >Jag Ska Lärä Dig / Slängpolska</a
+            >: Polska, Dm
+          </li>
+          <li class="tune-name">
             <a href="./musicFiles/chords/josephins.html">Josephins Dopvals</a>:
             Waltz, F
           </li>
           <li class="tune-name">
-            <a href="./musicFiles/chords/jag-ska-lärä-dig-slängpolska.html"
-              >Jag Ska Lärä Dig / Slängpolska</a
-            >: Polska, Dm
+            <a href="./musicFiles/chords/julia-delanys-chords.html"
+              >Julia Delany's</a
+            >: Reel, Dm
           </li>
           <li class="tune-name">
             <a href="./musicFiles/chords/jump-at-the-sun.html"
