--- a/sessionClass.html
+++ b/sessionClass.html
@@ -98,7 +98,8 @@
         </p>
         <h3 class="centered-content sub-heading">Up Next:</h3>
         <p class="tune-name">
-          <a href="https://thesession.org/tunes/48">Hardiman The Fiddler</a>
+          <a href="https://thesession.org/tunes/48">Hardiman The Fiddler</a>,
+          <a href="./Tunes/julia-delanys.html">Julia Delany's</a>
         </p>
       </div>
       <div>
