Updated tunes of the week

--- a/sessionClass.html
+++ b/sessionClass.html
@@ -93,13 +93,15 @@
         <h3 class="centered-content sub-heading">Tune(s) of the week:</h3>
 
         <p class="tune-name">
-          <a href="./Tunes/white-petticoat.html">The White Petticoat</a>,
-          <a href="./Tunes/sailors-wife.html">Sailor's Wife</a>
+          <a href="https://thesession.org/tunes/48">Hardiman The Fiddler</a>,
+          <a href="./Tunes/julia-delanys.html">Julia Delany's</a>
         </p>
         <h3 class="centered-content sub-heading">Up Next:</h3>
         <p class="tune-name">
-          <a href="https://thesession.org/tunes/48">Hardiman The Fiddler</a>,
-          <a href="./Tunes/julia-delanys.html">Julia Delany's</a>
+          <a href="https://thesession.org/tunes/239"
+            >The Ballydesmond Polka (#1)</a
+          >,
+          <a href="https://thesession.org/tunes/1549">Sweeny's Polka</a>
         </p>
       </div>
       <div>
@@ -304,6 +306,9 @@
             >: Waltz, D
           </li>
           <li class="tune-name">
+            <a href="./Tunes/sailors-wife.html">Sailor's Wife</a>: Jig, Dm
+          </li>
+          <li class="tune-name">
             <a href="./Tunes/jump-at-the-sun.html">Jump At The Sun</a>: Jig, Gm
           </li>
           <li class="tune-name">
@@ -504,6 +509,10 @@
             <a href="https://thesession.org/tunes/14425" target="_blank"
               >Vals Efter Lasse I Lyby</a
             >: Waltz, Am
+          </li>
+          <li class="tune-mane">
+            <a href="./Tunes/white-petticoat.html">The White Petticoat</a>: Jig,
+            Em
           </li>
           <div class="musicPlayer">
             <iframe
