Added chord pages for the new tunes of the week

--- a/chords.html
+++ b/chords.html
@@ -90,6 +90,11 @@
             >: Waltz, D
           </li>
           <li class="tune-name">
+            <a href="./musicFiles/chords/ballydesmond2-chords.html"
+              >The Ballydesmond (#1)</a
+            >: Polka, Am dor
+          </li>
+          <li class="tune-name">
             <a href="./musicFiles/chords/ballydesmond.html"
               >The Ballydesmond (#2)</a
             >: Polka, Am dor
@@ -311,6 +316,10 @@
           <li class="tune-name">
             <a href="./musicFiles/chords/swallowtail.html">The Swallowtail</a>:
             Jig, Em dor
+          </li>
+          <li class="tune-name">
+            <a href="./musicFiles/chords/sweenys-chords.html"> Sweeny's</a>:
+            Polka, A
           </li>
           <li class="tune-name">
             <a href="./musicFiles/chords/tripping-up-the-stairs.html"
