Added new tunes of the week plus chords

--- a/chords.html
+++ b/chords.html
@@ -67,6 +67,12 @@
       <div class="container">
         <ul>
           <li class="tune-name">
+            <a href="./musicFiles/chords/30-ars-jiggen-chords.html"
+              >30-Års Jiggen</a
+            >
+            : Jig, G
+          </li>
+          <li class="tune-name">
             <a href="./musicFiles/chords/adventspolksa.html">Adeventspolksa</a>
             : Polska, G
           </li>
@@ -177,6 +183,11 @@
             Reel, F#m dor
           </li>
           <li class="tune-name">
+            <a href="./musicFiles/chords/hag-at-the-churn-chords.html"
+              >Hag At The Churn</a
+            >: Jig, D mix
+          </li>
+          <li class="tune-name">
             <a href="./musicFiles/chords/hardiman-the-fiddler-chords.html"
               >Hardiman the Fiddler</a
             >: Slip Jig, D mix
@@ -194,6 +205,11 @@
           <li class="tune-name">
             <a href="./musicFiles/chords/josephins.html">Josephins Dopvals</a>:
             Waltz, F
+          </li>
+          <li class="tune-name">
+            <a href="./musicFiles/chords/jovano-jovanke-chords.html"
+              >Jovano, Jovanke</a
+            >: D Freygish
           </li>
           <li class="tune-name">
             <a href="./musicFiles/chords/julia-delanys-chords.html"
@@ -270,6 +286,10 @@
           <li class="tune-name">
             <a href="./musicFiles/chords/rakish-paddy.html">Rakish Paddy</a>:
             Reel, D mix
+          </li>
+          <li class="tune-name">
+            <a href="./musicFiles/chords/red-jacket-chords.html">Red Jacket</a>:
+            Slip jig (polska?), A
           </li>
           <li class="tune-name">
             <a href="./musicFiles/chords/road-to-lisdoonvarna.html"
