--- a/sessionClass.html
+++ b/sessionClass.html
@@ -93,15 +93,16 @@
         <h3 class="centered-content sub-heading">Tune(s) of the week:</h3>
 
         <p class="tune-name">
-          <a href="https://thesession.org/tunes/48">Hardiman The Fiddler</a>,
-          <a href="./Tunes/julia-delanys.html">Julia Delany's</a>
+          <a href="https://thesession.org/tunes/239"
+            >The Ballydesmond Polka (#1)</a
+          >, <a href="https://thesession.org/tunes/1549">Sweeny's Polka</a>,
+          <a href="./Tunes/hag-at-the-churn.html">Hag At The Churn</a>,
+          <a href="./Tunes/red-jacket.html">Red Jacket</a>
         </p>
         <h3 class="centered-content sub-heading">Up Next:</h3>
         <p class="tune-name">
-          <a href="https://thesession.org/tunes/239"
-            >The Ballydesmond Polka (#1)</a
-          >,
-          <a href="https://thesession.org/tunes/1549">Sweeny's Polka</a>
+          <a href="./Tunes/jovano-jovanke.html">Jovano, Jovanke</a>,
+          <a href="./Tunes/30-ars-jiggen.html">30-Års Jiggen</a>
         </p>
       </div>
       <div>
@@ -279,6 +280,11 @@
             >: Reel, F#m
           </li>
           <li class="tune-name">
+            <a href="https://thesession.org/tunes/48" target="_blank"
+              >Hardiman The Fiddler </a
+            >: Slig jig, Dmix
+          </li>
+          <li class="tune-name">
             <a href="https://thesession.org/tunes/49" target="_blank"
               >The Harvest Home</a
             >: Hornpipe, D
@@ -306,7 +312,7 @@
             >: Waltz, D
           </li>
           <li class="tune-name">
-            <a href="./Tunes/sailors-wife.html">Sailor's Wife</a>: Jig, Dm
+            <a href="./Tunes/julia-delanys.html">Julia Delany's</a>: Reel, Dm
           </li>
           <li class="tune-name">
             <a href="./Tunes/jump-at-the-sun.html">Jump At The Sun</a>: Jig, Gm
@@ -429,6 +435,9 @@
             <a href="https://thesession.org/tunes/88" target="_blank"
               >The Rolling Waves</a
             >: Jig, D
+          </li>
+          <li class="tune-name">
+            <a href="./Tunes/sailors-wife.html">Sailor's Wife</a>: Jig, Dm
           </li>
           <li class="tune-name">
             <a
