Corrected error for white petticoat on session class page

--- a/sessionClass.html
+++ b/sessionClass.html
@@ -519,7 +519,7 @@
               >Vals Efter Lasse I Lyby</a
             >: Waltz, Am
           </li>
-          <li class="tune-mane">
+          <li class="tune-name">
             <a href="./Tunes/white-petticoat.html">The White Petticoat</a>: Jig,
             Em
           </li>
