--- a/fridayTunes.html
+++ b/fridayTunes.html
@@ -68,7 +68,7 @@
       <div class="container-content cc-tunes">
         <div class="text">
           <p>
-            Here's a sample of some of the things we used to play for 'Fridays
+            <!-- Here's a sample of some of the things we used to play for 'Fridays
             Tunes', including everything that can be found on the
             <a href="sessionClass.html" class="tune-group">Session Class</a>
             page. For the most part, only tunes that more than one of us play
@@ -76,17 +76,18 @@
             everyone’s repertoire who participates. We'll keep adding things to
             the list as we discover more shared repertoire and learn new tunes
             together. We're not playing in the public on Fridays at the moment,
-            but stay tuned as things unfold.
+            but stay tuned as things unfold. -->
+            This page presents tunes beyond ones that are taught in our session
+            class. It features a lot of classics as well as more obscure and
+            difficult pieces. These are great for pushing your repertoire to the
+            boundaries and represent our commitment to bringing the Whangarei
+            community a diverse range of folk tunes from all over. This list
+            will grow over time, so stay tuned!
           </p>
         </div>
       </div>
       <div class="tunes-list">
         <ul>
-          <!-- <li class="tune-name">
-            <a href="https://thesession.org/tunes/14300" target="_blank"
-              >Angeline The Baker</a
-            >: Polka, D
-          </li> -->
           <li class="tune-name">
             <a
               href="https://irish.session.nz/tunes-archive/an-phis-fhliuch/"
@@ -120,35 +121,16 @@
               >Big Sciota</a
             >: Reel, G
           </li>
-          <!-- <li class="tune-name">
-            <a
-              href="https://irish.session.nz/tunes-archive/billy-sullivan/"
-              target="_blank"
-              >Bill Sullivan's</a
-            >: Polka, A (or D)
-          </li> -->
           <li class="tune-name">
             <a href="https://thesession.org/tunes/5" target="_blank">
               The Blarney Pilgrim</a
             >: Jig, G
           </li>
-          <!-- <li class="tune-name">
-            <a
-              href="https://irish.session.nz/tunes-archive/breetches-full-of-stitches/"
-              target="_blank"
-              >The Britches Full Of Stitches</a
-            >: Polka, A
-          </li> -->
           <li class="tune-name">
             <a href="https://thesession.org/tunes/15" target="_blank"
               >Calliope House</a
             >: Jig, D
           </li>
-          <!-- <li class="tune-name">
-            <a href="https://thesession.org/tunes/703" target="_blank"
-              >Catharsis</a
-            >: Reel, Gm
-          </li> -->
           <li class="tune-name">
             <a href="https://thesession.org/tunes/15454" target="_blank"
               >Chinquapin Hunting</a
@@ -171,13 +153,6 @@
               >Connaughtman's Rambles</a
             >: Jig, D
           </li>
-          <!-- <li class="tune-name">
-            <a
-              href="https://irish.session.nz/tunes-archive/crested-hens/"
-              target="_blank"
-              >Crested Hens</a
-            >: Waltz, Em dor
-          </li> -->
           <li class="tune-name">
             <a
               href="https://irish.session.nz/tunes-archive/dunmore-lasses/"
@@ -190,32 +165,6 @@
               >Dusty Windowsills</a
             >: Jig, Am dor
           </li>
-          <!-- <li class="tune-name">
-            <a
-              href="https://irish.session.nz/tunes-archive/farewell-to-whalley-range/"
-              target="_blank"
-              >Farewell To Whalley Range</a
-            >: Slip jig, F#m
-          </li>
-          <li class="tune-name">
-            <a href="https://thesession.org/tunes/1080" target="_blank"
-              >Father O'Flynn</a
-            >: Jig, D
-          </li> -->
-          <!-- <li class="tune-name">
-            <a
-              href="https://irish.session.nz/tunes-archive/finnish-polka/"
-              target="_blank"
-              >The Finnish</a
-            >: Polka, Bm dor
-          </li>
-          <li class="tune-name">
-            <a
-              href="https://irish.session.nz/tunes-archive/fishers-hornpipe/"
-              target="_blank"
-              >Fisher's</a
-            >: Hornpipe, D
-          </li> -->
           <li class="tune-name">
             <a
               href="https://irish.session.nz/tunes-archive/franks-reel/"
@@ -223,13 +172,6 @@
               >Frank's</a
             >: Reel, A
           </li>
-          <!-- <li class="tune-name">
-            <a
-              href="https://irish.session.nz/tunes-archive/green-cake/"
-              target="_blank"
-              >The Green Cake</a
-            >: Reel, A
-          </li> -->
           <li class="tune-name">
             <a
               href="https://irish.session.nz/tunes-archive/hag-at-the-churn/"
@@ -237,11 +179,6 @@
               >The Hag At The Churn</a
             >: Jig, D mix
           </li>
-          <!-- <li class="tune-name">
-            <a href="https://thesession.org/tunes/445" target="_blank"
-              >Itzikel</a
-            >: Frailach, Em
-          </li> -->
           <li class="tune-name">
             <a href="https://thesession.org/tunes/1812" target="_blank"
               >Jerusalem Ridge</a
@@ -254,13 +191,6 @@
               >Jim Wards</a
             >: Jig, G
           </li>
-          <!-- <li class="tune-name">
-            <a
-              href="https://irish.session.nz/tunes-archive/kesh-jig/"
-              target="_blank"
-              >The Kesh</a
-            >: Jig, G
-          </li> -->
           <li class="tune-name">
             <a
               href="https://irish.session.nz/tunes-archive/kid-on-the-mountain/"
@@ -280,26 +210,9 @@
               >MacArthur Road</a
             >: Reel, E
           </li>
-          <!-- <li class="tune-name">
-            <a href="https://thesession.org/tunes/7041" target="_blank"
-              >Macedonian Oro</a
-            >: Horo, A
-          </li>
-          <li class="tune-name">
-            <a
-              href="https://irish.session.nz/tunes-archive/maid-behind-the-bar/"
-              target="_blank"
-              >The Maid Behind The Bar</a
-            >: Reel, D
-          </li>
-          <li class="tune-name">
-            <a href="https://thesession.org/tunes/9002" target="_blank"
-              >Maison De Glace</a
-            >: Jig, D
-          </li> -->
           <li class="tune-name">
             <a href="https://thesession.org/tunes/70" target="_blank">
-              Merrily Kissed The Quaker </a
+              Merrily Kissed The Quaker</a
             >: Slide, G
           </li>
           <li class="tune-name">
@@ -353,11 +266,6 @@
               >The Queen Of The Rushes</a
             >: Jig, D
           </li>
-          <!-- <li class="tune-name">
-            <a href="https://thesession.org/tunes/86" target="_blank"
-              >Rakish Paddy</a
-            >: Reel, D mix
-          </li> -->
           <li class="tune-name">
             <a href="https://thesession.org/tunes/2639" target="_blank"
               >Ramnee Ceilidh</a
@@ -387,11 +295,6 @@
               >The Sally Gardens</a
             >: Reel, G
           </li>
-          <!-- <li class="tune-name">
-            <a href="https://thesession.org/tunes/7905" target="_blank"
-              >Shove The Pig's Foot A Little Closer To The Fire</a
-            >: Reel, G
-          </li> -->
           <li class="tune-name">
             <a href="https://thesession.org/tunes/449" target="_blank"
               >Si Beag Si Mor</a
@@ -402,13 +305,6 @@
               >The Silver Spear</a
             >: Reel, D
           </li>
-          <!-- <li class="tune-name">
-            <a
-              href="https://irish.session.nz/tunes-archive/tripping-up-the-stairs/"
-              target="_blank"
-              >Tripping Up The Stairs</a
-            >: Jig, D
-          </li> -->
           <li class="tune-name">
             <a href="https://thesession.org/tunes/602" target="_blank"
               >Whiskey Before Breakfast</a
