--- a/sessionClass.html
+++ b/sessionClass.html
@@ -93,16 +93,14 @@
         <h3 class="centered-content sub-heading">Tune(s) of the week:</h3>
 
         <p class="tune-name">
-          <a href="https://thesession.org/tunes/239"
-            >The Ballydesmond Polka (#1)</a
-          >, <a href="https://thesession.org/tunes/1549">Sweeny's Polka</a>,
-          <a href="./Tunes/hag-at-the-churn.html">Hag At The Churn</a>,
-          <a href="./Tunes/red-jacket.html">Red Jacket</a>
+          <a href="./Tunes/jovano-jovanke.html">Jovano, Jovanke</a>,
+          <a href="./Tunes/30-ars-jiggen.html">30-Års Jiggen</a>
         </p>
         <h3 class="centered-content sub-heading">Up Next:</h3>
         <p class="tune-name">
-          <a href="./Tunes/jovano-jovanke.html">Jovano, Jovanke</a>,
-          <a href="./Tunes/30-ars-jiggen.html">30-Års Jiggen</a>
+          <a href="./Tunes/hora-de-kaval.html">Hora de Kaval</a>,
+          <a href="./Tunes/derriere-chez-nouz.html">Derrière Chez Nous</a>,
+          <a href="./Tunes/limousin-mazurka.html">Limousin Mazurka</a>
         </p>
       </div>
       <div>
@@ -133,8 +131,13 @@
             >: Waltz, D
           </li>
           <li class="tune-name">
+            <a href="https://thesession.org/tunes/239" target="_blank"
+              >The Ballydesmond (#1)</a
+            >: Polka, Am
+          </li>
+          <li class="tune-name">
             <a href="https://thesession.org/tunes/238" target="_blank"
-              >The Ballydesmond Polka (#2)</a
+              >The Ballydesmond (#2)</a
             >: Polka, Am
           </li>
           <li class="tune-name">
@@ -280,6 +283,10 @@
             >: Reel, F#m
           </li>
           <li class="tune-name">
+            <a href="./Tunes/hag-at-the-churn.html">Hag At The Churn</a>: Jig,
+            Dmix
+          </li>
+          <li class="tune-name">
             <a href="https://thesession.org/tunes/48" target="_blank"
               >Hardiman The Fiddler </a
             >: Slig jig, Dmix
@@ -420,6 +427,10 @@
             >: Reel, D mix
           </li>
           <li class="tune-name">
+            <a href="./Tunes/red-jacket.html">Red Jacket</a>: Slip Jig
+            (Polska?), A
+          </li>
+          <li class="tune-name">
             <a
               href="https://irish.session.nz/tunes-archive/rights-of-man/"
               target="_blank"
@@ -503,6 +514,11 @@
             <a href="https://thesession.org/tunes/106" target="_blank"
               >The Swallowtail</a
             >: Jig, Em
+          </li>
+          <li class="tune-name">
+            <a href="https://thesession.org/tunes/1549" target="_blank"
+              >Sweeny's</a
+            >: Polka, A
           </li>
           <li class="tune-name">
             <a
