Updated session class page for end of term

--- a/sessionClass.html
+++ b/sessionClass.html
@@ -93,19 +93,19 @@
         <h3 class="centered-content sub-heading">Tune(s) of the week:</h3>
 
         <p class="tune-name">
-          <a href="./Tunes/jovano-jovanke.html">Jovano, Jovanke</a>,
-          <a href="./Tunes/30-ars-jiggen.html">30-Års Jiggen</a>
-        </p>
-        <h3 class="centered-content sub-heading">Up Next:</h3>
-        <p class="tune-name">
           <a href="./Tunes/hora-de-kaval.html">Hora de Kaval</a>,
           <a href="./Tunes/derriere-chez-nouz.html">Derrière Chez Nous</a>,
           <a href="./Tunes/limousin-mazurka.html">Limousin Mazurka</a>
         </p>
+        <h3 class="centered-content sub-heading">Up Next:</h3>
+        <p class="tune-name">TBD - stay tuned!</p>
       </div>
       <div>
         <h3 class="centered-content sub-heading">Session Class Repertoire:</h3>
         <ul>
+          <li class="tune-name">
+            <a href="./Tunes/30-ars-jiggen.html">30-Års Jiggen</a>: Jig, G
+          </li>
           <li class="tune-name">
             <a href="./Tunes/adventspolska.html">Adventspolska</a>: Polksa, G
           </li>
@@ -317,6 +317,10 @@
               target="_blank"
               >Josefin's Waltz</a
             >: Waltz, D
+          </li>
+          <li class="tune-name">
+            <a href="./Tunes/jovano-jovanke.html">Jovano, Jovanke</a>: D
+            Freygish
           </li>
           <li class="tune-name">
             <a href="./Tunes/julia-delanys.html">Julia Delany's</a>: Reel, Dm
