Added new tune of the week

--- a/sessionClass.html
+++ b/sessionClass.html
@@ -78,7 +78,7 @@
           </p>
            
           <p>
-            Most of the tunes below redirect to either the NZ Irish Session
+            Some of the tunes below redirect to either the NZ Irish Session
             (irish.session.nz) or The Session (thesession.org). Both sites are
             worth checking out as they offer slightly different features. For
             example, The NZ Irish Session allows you to slow a tune down while
@@ -98,7 +98,9 @@
           <a href="./Tunes/limousin-mazurka.html">Limousin Mazurka</a>
         </p>
         <h3 class="centered-content sub-heading">Up Next:</h3>
-        <p class="tune-name">TBD - stay tuned!</p>
+        <p class="tune-name">
+          <a href="https://thesession.org/tunes/878">Da Full Rigged Ship</a>
+        </p>
       </div>
       <div>
         <h3 class="centered-content sub-heading">Session Class Repertoire:</h3>
