Added new tune of the week with chords

--- a/chords.html
+++ b/chords.html
@@ -240,6 +240,11 @@
             Jig, Em
           </li>
           <li class="tune-name">
+            <a href="./musicFiles/chords/la-fee-des-dents-chords.html"
+              >La Fee Des Dents</a
+            >: Jig, G
+          </li>
+          <li class="tune-name">
             <a href="./musicFiles/chords/little-beggarman.html"
               >The Little Beggarman</a
             >: Hornpipe, A
