--- a/sessionClass.html
+++ b/sessionClass.html
@@ -90,16 +90,13 @@
         </div>
       </div>
       <div class="tunes-week tunes-container">
-        <h3 class="centered-content sub-heading">Tune(s) of the week:</h3>
-
+        <h3 class="centered-content sub-heading">Tune of the week:</h3>
         <p class="tune-name">
-          <a href="./Tunes/hora-de-kaval.html">Hora de Kaval</a>,
-          <a href="./Tunes/derriere-chez-nouz.html">Derrière Chez Nous</a>,
-          <a href="./Tunes/limousin-mazurka.html">Limousin Mazurka</a>
+          <a href="https://thesession.org/tunes/878">Da Full Rigged Ship</a>
         </p>
         <h3 class="centered-content sub-heading">Up Next:</h3>
         <p class="tune-name">
-          <a href="https://thesession.org/tunes/878">Da Full Rigged Ship</a>
+          <a href="https://thesession.org/tunes/20653">La Fee Des Dents</a>
         </p>
       </div>
       <div>
@@ -222,6 +219,10 @@
             <a href="./Tunes/dans-loudieg.html">Dans Loudieg</a>: Ronde, Am
           </li>
           <li class="tune-name">
+            <a href="./Tunes/derriere-chez-nouz.html">Derrière Chez Nous</a>:
+            Bouree, Am
+          </li>
+          <li class="tune-name">
             <a
               href="https://irish.session.nz/tunes-archive/drowsy-maggie-cm/"
               target="_blank"
@@ -299,6 +300,9 @@
             >: Hornpipe, D
           </li>
           <li class="tune-name">
+            <a href="./Tunes/hora-de-kaval.html">Hora de Kaval</a>: Hora, Dm
+          </li>
+          <li class="tune-name">
             <a href="Tunes/humours-of-ballyloughlin.html"
               >The Humours Of Ballyloughlin</a
             >: Jig, D
@@ -356,6 +360,10 @@
             <a href="https://thesession.org/tunes/566" target="_blank"
               >The Little Beggarman</a
             >: Hornpipe, A mix
+          </li>
+          <li class="tune-name">
+            <a href="./Tunes/limousin-mazurka.html">Limousin Mazurka</a>:
+            Mazurka, Em
           </li>
           <li class="tune-name">
             <a href="https://thesession.org/tunes/8853" target="_blank"
