Added new tune of the week plus chord charts, alphabetized tunes and chords

--- a/chords.html
+++ b/chords.html
@@ -157,13 +157,6 @@
             Reel, D
           </li>
           <li class="tune-name">
-            <a href="./musicFiles/chords/itzikel.html">Itzikel</a>: Frailach, Em
-          </li>
-          <li class="tune-name">
-            <a href="./musicFiles/chords/da-lounge-bar.html">Da Lounge Bar</a>:
-            Jig, D
-          </li>
-          <li class="tune-name">
             <a href="./musicFiles/chords/father-o'flynn.html">Father O'Flynn</a
             >: Jig, D
           </li>
@@ -171,6 +164,11 @@
             <a href="./musicFiles/chords/farewell-to-whalley-range.html"
               >Farewell to Whalley Range</a
             >: Slip Jig, F#m dor
+          </li>
+          <li class="tune-name">
+            <a href="./musicFiles/chords/la-fee-des-dents-chords.html"
+              >La Fee Des Dents</a
+            >: Jig, G
           </li>
           <li class="tune-name">
             <a href="./musicFiles/chords/finnish-polka.html">The Finnish</a>:
@@ -183,6 +181,10 @@
             <a href="./musicFiles/chords/foxhunter.html">The Foxhunter</a>: Slip
             Jig, D
           </li>
+        </li>
+        <li class="tune-name">
+          <a href="./musicFiles/chords/da-full-rigged-ship-chords.html">Da Full Rigged Ship</a>: Jig, Am
+        </li>
           <li class="tune-name">
             <a href="./musicFiles/chords/green-cake.html">The Green Cake</a>:
             Reel, F#m dor
@@ -206,6 +208,10 @@
             <a href="./musicFiles/chords/humours-of-ballyloughlin.html"
               >Humours Of Ballyloughlin</a
             >: Jig, D mix
+          </li>
+          <li class="tune-name"><a href="./musicFiles/chords/inion-ni-scannlain-chords.html">Iníon Ní Scannláin</a>: Waltz, D</li>
+          <li class="tune-name">
+            <a href="./musicFiles/chords/itzikel.html">Itzikel</a>: Frailach, Em
           </li>
           <li class="tune-name">
             <a href="./musicFiles/chords/jag-ska-lärä-dig-slängpolska.html"
@@ -240,11 +246,6 @@
             Jig, Em
           </li>
           <li class="tune-name">
-            <a href="./musicFiles/chords/la-fee-des-dents-chords.html"
-              >La Fee Des Dents</a
-            >: Jig, G
-          </li>
-          <li class="tune-name">
             <a href="./musicFiles/chords/little-beggarman.html"
               >The Little Beggarman</a
             >: Hornpipe, A
@@ -253,6 +254,10 @@
             <a href="./musicFiles/chords/limousin-mazurka-chords.html"
               >Limousin Mazurka</a
             >: Mazurka, Em
+          </li>
+          <li class="tune-name">
+            <a href="./musicFiles/chords/da-lounge-bar.html">Da Lounge Bar</a>:
+            Jig, D
           </li>
           <li class="tune-name">
             <a href="./musicFiles/chords/macedonian-horo.html"
