--- a/sessionClass.html
+++ b/sessionClass.html
@@ -92,11 +92,11 @@
       <div class="tunes-week tunes-container">
         <h3 class="centered-content sub-heading">Tune of the week:</h3>
         <p class="tune-name">
-          <a href="https://thesession.org/tunes/878">Da Full Rigged Ship</a>
+          <a href="https://thesession.org/tunes/20653">La Fee Des Dents</a>
         </p>
         <h3 class="centered-content sub-heading">Up Next:</h3>
         <p class="tune-name">
-          <a href="https://thesession.org/tunes/20653">La Fee Des Dents</a>
+          <a href="./Tunes/inion-ni-scannlain.html">Iníon Ní Scannláin</a>
         </p>
       </div>
       <div>
@@ -230,11 +230,6 @@
             >: Reel, Em dor
           </li>
           <li class="tune-name">
-            <a href="https://thesession.org/tunes/654" target="_blank"
-              >The Fermanagh</a
-            >: Highland, D
-          </li>
-          <li class="tune-name">
             <a href="https://thesession.org/tunes/221" target="_blank"
               >The Earl's Chair</a
             >: Reel, D
@@ -248,6 +243,11 @@
             <a href="https://thesession.org/tunes/1080" target="_blank"
               >Father O'Flynn</a
             >: Jig, D
+          </li>
+          <li class="tune-name">
+            <a href="https://thesession.org/tunes/654" target="_blank"
+              >The Fermanagh</a
+            >: Highland, D
           </li>
           <li class="tune-name">
             <a
@@ -277,6 +277,11 @@
             <a href="https://thesession.org/tunes/482" target="_blank"
               >The Foxhunter</a
             >: Slip jig, D
+          </li>
+          <li class="tune-name">
+            <a href="https://thesession.org/tunes/878"
+            target="_blank">Da Full Rigged Ship</a>: Jig, Am
+        </p>
           </li>
           <li class="tune-name">
             <a
