Added new tune of the week and chords, updated header css on sheet music pages

--- a/chords.html
+++ b/chords.html
@@ -157,6 +157,10 @@
             Reel, D
           </li>
           <li class="tune-name">
+            <a href="./musicFiles/chords/elzics-farewell-chords.html">Elzic's Farewell</a>:
+            Reel, Am
+          </li>
+          <li class="tune-name">
             <a href="./musicFiles/chords/father-o'flynn.html">Father O'Flynn</a
             >: Jig, D
           </li>
