--- a/sessionClass.html
+++ b/sessionClass.html
@@ -92,11 +92,11 @@
       <div class="tunes-week tunes-container">
         <h3 class="centered-content sub-heading">Tune of the week:</h3>
         <p class="tune-name">
-          <a href="https://thesession.org/tunes/20653">La Fee Des Dents</a>
+          <a href="./Tunes/inion-ni-scannlain.html">Iníon Ní Scannláin</a>
         </p>
         <h3 class="centered-content sub-heading">Up Next:</h3>
         <p class="tune-name">
-          <a href="./Tunes/inion-ni-scannlain.html">Iníon Ní Scannláin</a>
+          <a href="./Tunes/elzics-farewell.html">Elzic's Farewell</a>
         </p>
       </div>
       <div>
@@ -243,6 +243,10 @@
             <a href="https://thesession.org/tunes/1080" target="_blank"
               >Father O'Flynn</a
             >: Jig, D
+          </li>
+          <li class="tune-name">
+            <a href="https://thesession.org/tunes/20653"
+            target="_blank">La Fee Des Dents</a>: Jig, G
           </li>
           <li class="tune-name">
             <a href="https://thesession.org/tunes/654" target="_blank"
